# Alphomi

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SECURITY.zh-CN.md  SUPPORT.md  SUPPORT.zh-CN.md  config.example.yaml  package.json  pnpm-lock.yaml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
apps/brain/: README.md  package.json  pyproject.toml
apps/brain/src/alphomi_brain/: main.py
apps/brain/src/alphomi_brain/api/: websockets.py
apps/brain/src/alphomi_brain/core/: chat_store.py  context.py  discovery.py  events.py  guard.py  llm_client.py  pras_client.py  runtime_llm_config.py  runtimes.py  teaching_agent.py  teaching_store.py  title_generator.py  tool_base.py
apps/brain/src/alphomi_brain/tools/: dispatch_tool.py  exec_tools.py  factory.py  local_definitions.py  remote_definitions.py  teaching_tools.py  todo_tool.py
apps/brain/src/alphomi_brain/utils/: config.py  logger.py  system_context.py  tool_settings.py
apps/brain/src/alphomi_brain/workflows/: advanced_mode.py  agent_node.py  base.py  benchmark_mode.py  factory.py  fast_mode.py  prompt_utils.py  research_mode.py  streaming_workflow.py  teaching_mode.py
scripts/: bootstrap.sh  brain-dev.sh  build-brain.sh  clean.sh  doctor.mjs  smoke.sh  sync-config-template.mjs
test/: brain-llm-settings-smoke.py  brain-tool-policy-smoke.py  driver-snapshot-smoke.mjs  driver-storage-smoke.mjs  file_ops_patch_harness.py  llm_apply_patch_e2e.py  port-discovery-smoke.sh  settings-llm-ui-smoke.mjs  (+2 more)
(+81 files in other folders)
